Add day 13 solution